# mipx

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  benchmark_barrier.sh  plan-dualsimplex.md  plan-mip.md  pyproject.toml
.claude/: settings.json
.claude/commands/: review.md  start.md
.github/workflows/: barrier-regression.yml  ci.yml  wheels.yml
cmake/: CompilerFlags.cmake
docs/: ROADMAP.md  benchmark.md  roadmap.md
include/mipx/: automorphism.h  barrier.h  barrier_presolve.h  bnb_node.h  branching.h  clique_table.h  conflict_graph.h  core.h  cut_manager.h  cut_pool.h  cut_strengthening.h  domain.h  dual_simplex.h  exact_refinement.h  gomory.h  heuristic_runtime.h  heuristics.h  implication_graph.h  io.h  logger.h  lp_problem.h  lp_solver.h  lu.h  mip_solver.h  orbital_fixing.h  pdlp.h  presolve.h  probing.h  reduced_cost_fixer.h  schreier_sims.h  separators.h  sparse_matrix.h  sparse_work_vector.h  symbreak.h  symmetry.h  variable_bounds.h  work_units.h
python/: CMakeLists.txt
python/mipx/: __init__.py
python/src/: bindings.cpp
python/tests/: test_api.py
scripts/: emps_to_mps.sh
src/: CMakeLists.txt  core.cpp
src/cli/: main.cpp
src/cuts/: cmir.cpp  cut_manager.cpp  cut_pool.cpp  cut_strengthening.cpp  gomory.cpp  intersection_cut.cpp  lifted_covers.cpp  mod_k.cpp  separators.cpp
src/heuristics/: aux_objective.cpp  budget.cpp  common.h  crossover.cpp  diving.cpp  feasibility_jump.cpp  feaspump.cpp  local_branching.cpp  local_search.cpp  propagation_completion.cpp  proximity_search.cpp  randomized_rounding.cpp  reduced_cost.cpp  rens.cpp  rins.cpp  rounding.cpp  runtime.cpp  shifting.cpp  symmetry.cpp  undercover.cpp  zero_objective.cpp  zi_rounding.cpp
src/io/: lp_reader.cpp  mps_reader.cpp  mps_writer.cpp  solu_reader.cpp
src/lp/: barrier.cpp  barrier_cpu.cpp  barrier_gpu.cu  barrier_gpu_wrap.cpp  barrier_presolve.cpp  cuda_graph.cuh  dual_simplex.cpp  exact_refinement.cpp  lp_problem.cpp  lp_solver.cpp  lu.cpp  newton_solver.h  pdlp.cpp  pdlp_gpu.cu  pdlp_kernels.cu  pdlp_kernels.cuh  sparse_matrix.cpp
src/mip/: automorphism.cpp  branching.cpp  clique_table.cpp  conflict_graph.cpp  domain.cpp  implication_graph.cpp  mip_solver.cpp  node_queue.cpp  orbital_fixing.cpp  probing.cpp  reduced_cost_fixer.cpp  schreier_sims.cpp  symbreak.cpp  variable_bounds.cpp
src/presolve/: presolve.cpp
tests/: CMakeLists.txt  benchmark_vs_highs.py  test_barrier.cpp  test_benchmark.cpp  test_branching.cpp  test_clique_table.cpp  test_conflict_graph.cpp  test_core.cpp  test_cut_manager.cpp  test_cuts.cpp  test_domain.cpp  test_dual_simplex.cpp  test_exact_refinement.cpp  test_heuristics.cpp  test_implication_graph.cpp  test_incremental.cpp  test_lp_problem.cpp  test_lp_solver.cpp  test_lu.cpp  test_mip_solver.cpp  test_node_queue.cpp  test_parallel.cpp  test_pdlp.cpp  test_presolve.cpp  test_reduced_cost_fixer.cpp  test_sparse_matrix.cpp  test_sparse_work_vector.cpp  test_symmetry.cpp
tests/data/: download_miplib.sh  download_mittelman_lp.sh  download_netlib.sh  download_test_instances.sh  netlib.solu  tiny.lp  tiny.mps  tiny.solu
tests/perf/: README.md  check_regression.py  generate_barrier_lp_baselines.py  generate_barrier_lp_baselines.sh  generate_dual_baselines.py  generate_dual_baselines.sh  generate_highs_baselines.py  generate_highs_baselines.sh  generate_highspy_baselines.py  generate_highspy_baselines.sh  generate_mip_regression_baseline.py  generate_mip_regression_baseline.sh  generate_mipx_barrier_baselines.py  generate_mipx_barrier_baselines.sh  generate_mipx_baselines.py  generate_mipx_baselines.sh  generate_mittelman_baselines.py  generate_mittelman_baselines.sh  generate_pdlp_lp_baselines.py  generate_pdlp_lp_baselines.sh  highs_highspy_cli.py  mip_regression_corpus.csv  mittelman_dual_corpus.csv  netlib_dual_corpus.csv  run_barrier_lp_compare.py  run_barrier_lp_regression_gate.py  run_barrier_lp_regression_gate.sh  run_benchmark_matrix.py  run_benchmark_matrix.sh  run_determinism_suite.py  run_determinism_suite.sh  run_dual_correctness_investigation.py  run_dual_correctness_investigation.sh  run_dual_perf_gate.py  run_dual_perf_gate.sh  run_full_gate.py  run_full_gate.sh  run_highs_bench.py  run_highspy_bench.py  run_mip_gap_summary.py  (+27 more)
tests/perf/baselines/: README.md  barrier_gpu_stable_netlib_small.txt  barrier_lp_compare_meta.json  barrier_lp_compare_netlib.csv  barrier_lp_compare_netlib_forced_gpu.csv  highs_baseline_meta.json  highs_mip_miplib_small.csv  highspy_baseline_meta.json  highspy_lp_netlib_small.csv  mipx_barrier_baseline_meta.json  mipx_barrier_cpu_netlib_small.csv  mipx_barrier_gpu_netlib_small.csv  mipx_baseline_meta.json  mipx_dual_lp_baseline_meta.json  mipx_dual_lp_mittelman_curated.csv  mipx_dual_lp_netlib_anchors.csv  mipx_lp_netlib_small.csv  mipx_mip_miplib_small.csv  mipx_mip_regression_small_seed1_t1_stable.csv  mipx_mip_regression_small_seed1_t1_stable_meta.json  mipx_pdlp_lp_netlib_small.csv
